<resources>
    <string name="app_name">POCNotification</string>
    <string name="channel_description">POCNotification</string>

    <string name="sunday_initial_letter">D</string>
    <string name="monday_initial_letter">S</string>
    <string name="tuesday_initial_letter">T</string>
    <string name="wednesday_initial_letter">Q</string>
    <string name="thursday_initial_letter">Q</string>
    <string name="friday_initial_letter">S</string>
    <string name="saturday_initial_letter">S</string>

    <string name="notification_content">O horário da coleta de lixo %1$s está próximo.</string>
</resources>